--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_platform_widgets: ^7.0.1
+  iconify_flutter: ^0.0.7
 
 dev_dependencies:
   flutter_test:
