--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  easy_isolate: ^1.3.1
   flutter_platform_widgets: ^8.0.0
   fludoku: ^2.0.0
 
