--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   easy_isolate: ^1.3.1
   flutter_platform_widgets: ^8.0.0
   fludoku: ^2.0.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
